--- a/styles/Style.css
+++ b/styles/Style.css
@@ -8,6 +8,7 @@ body						{font: 16px Georgia, serif;}
 fieldset,table {width: 100%;  border-collapse: collapse;  border: 3px solid #0AB5F7;  background-color: #FAB245;  margin-left: auto;  margin-right: auto;}
 legend {  color: blue;  font-weight: bold;  background-color: #eee;}
 th {color:blue;}
+section {  overflow-y: scroll;}
 section > div				{padding: 5px;}
 header, nav, section		{background: #eee; text-align: center;}
 footer					{background: #eee; text-align: center;}
