--- a/styles/Style.css
+++ b/styles/Style.css
@@ -17,3 +17,5 @@ nav span             				{ margin: 0px 10px 0px 0px;
 						display: inline-block;}
 
 #ErrorMsgs          		 { color: #f61; font-size: smaler}
+table.fixed { table-layout:fixed;}
+table.fixed td { overflow: hidden; }
